--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ pre_commit==4.3.0
 requests==2.32.5
 spotipy==2.24.0
 google-cloud-storage==2.18.2
+google-cloud-secret-manager==2.21.0
+python-dotenv==1.0.1
+tzdata==2025.2
